fix overflow issue with skills popup

--- a/portfolio-site/src/components/about/About.css
+++ b/portfolio-site/src/components/about/About.css
@@ -428,60 +428,7 @@
     object-fit: contain;
 }
 
-/*
-.education-section-tabs {
-    display: flex;
-    display: none;
-}
 
-.education-tab {
-    background: #c0c0c0;
-    border-bottom: 2px solid #808080;
-    border-right: 2px solid #808080;
-    border-left: 2px solid #ffffff;
-    border-top: 2px solid #ffffff;
-    width: fit-content;
-    padding: 5px;
-    color: #0a0a0a;
-    cursor: pointer;
-    transition: .15s ease-in;
-}
-
-
-.window-title-bar {
-    position: absolute;
-}
-
-.education-popup-window-container {
-    width: 400px;
-    height: 600px;
-    background: #c0c0c0;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
-.education-clubs-tab {
-        position: relative;
-}
-
-    .education-clubs-list {
-        overflow: hidden;
-        position: relative;
-    }
-
-    .education-window-content {
-        position: relative;
-        display: none;
-
-    }
-
-    .education-content-wrapper {
-        height: 100%;
-        position: relative;
-        overflow: hidden;
-    }
-*/
 
 /* Skills Section */
 .skills-popup-window-container {
@@ -498,16 +445,20 @@
     border-top: 2px solid #ffffff;
     box-shadow: 1px 1px 0 1px #0a0a0a, -1px -1px 0 1px #c0c0c0;
     color: #ffffff;
-    padding-bottom: 50px;
     display: none;
     z-index: 1000;
+}
+
+.skills-content-wrapper {
+    height: 100%;
+    width: 100%;
+    padding: 50px 10px 10px 10px;
 }
 
 .skills-window-content {
     background-color: #ffffff;
     overflow-y: auto;
     height: 100%;
-    margin: 5px;
     padding: 10px;
     border-left: 2px solid #0a0a0a;
     border-top: 2px solid #0a0a0a;
@@ -546,7 +497,6 @@
     .work-experience-popup-window-container {
         width: 100%;
         height: 100%;
-        padding: 0;
     }
 
     .club-item {
